2010-01-10  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated documentation

2010-01-10  Moreno Feltscher  <moreno@luagsh.ch>

	* Got rid of the new icons and use a text instead
	* Added link to every icon shown in frontend
	* Corrected regular expression for file ignoring due to wrong Microsoft Windows thumbnail file check
	* Updated language files
	* Added new icons for sorting and changed sort functionality
	* Fixed sort functionality for folders

2010-01-09  Moreno Feltscher  <moreno@luagsh.ch>

	* Reorganized icons

2010-01-09  Xavier Perseguers  <typo3@perseguers.ch>

	* Added hook to post-process the list of files
	* Finally fixed indexed_search problem

2010-01-07  Moreno Feltscher  <moreno@luagsh.ch>

	* Added feature #5911: Allow users to prevent specific folders related to their names to be shown on the frontend
	* Added feature #5910: Allow users to prevent specific files to be shown on the frontend

2010-01-04  Moreno Feltscher  <moreno@luagsh.ch>

	* Code cleanup (updated documentation inside code and fixed copyright information)

2009-12-31  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated documentation (new official template, reworked content)
	* Raised version to 1.0-dev (stable)
	* Added hook to post-process template markers (might be used to reimplement indexed_search feature removed with changeset #28154)
	* Reorganized icons
	* Added French translation

2009-12-29  Xavier Perseguers  <typo3@perseguers.ch>

	* Added feature #5855: Add link to go to parent directory on the folder icon
	* Added feature #1077: Templating
	* Fixed bug #5854: Cannot go one level up when in a sub-subdirectory
	* Removed indexed_search references
	* Added TS configuration option for the icon directory
	* Added feature #5853: Create Update wizard to move database configuration data into FlexForm

2009-12-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Performed task #5852: Move database fields to a FlexForm configuration
	* Localized filesize units